Fix table spacing in readonly mode

--- a/airbyte-webapp/src/components/connection/CatalogTree/CatalogTreeSubheader.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/CatalogTreeSubheader.module.scss
@@ -17,5 +17,6 @@
   @extend %catalogHeader;
 
   padding-top: 10px;
-  margin-left: 115px;
+  padding-left: 0;
+  margin-left: 0;
 }
